@@ -305,9 +305,11 @@ tag-button=Create a map tag for this trade.
 teleport-tooltip=Teleport to this hex core (__CONTROL__teleport-to-hex-core__)\nHotkey works without GUI open.
 unloader-filters-tooltip=Configure the unloader filters.
 sink-mode-tooltip-header=Sink Mode
-sink-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "sell" trades for each input item, producing coins.
+sink-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "sell" trades (which produce coins) for each item that is an input to any of these trades.
+sink-mode-confirmation-tooltip=[color=red]Turn these trades into sink trades?[.color]\nThis cannot be undone.
 generator-mode-tooltip-header=Generator Mode
-generator-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "buy" trades for each output item, consuming coins.
+generator-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "buy" trades (which consume coins) for each item that is an output of any of these trades.
+generator-mode-confirmation-tooltip=[color=red]Turn these trades into generator trades?[.color]\nThis cannot be undone.
 delete-core-tooltip-header=Deletion
 delete-core-tooltip-body=Delete this hex core.
 delete-core-confirmation=DELETE HEX CORE?
